Fix bottom bar on iOS.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,13 +7,12 @@
 }
 
 .app {
+	height: 100%;
 }
 
 .main {
 	position: relative;
-	/* mobile viewport bug fix */
-	min-height: -webkit-fill-available;
-	min-height: 100vh;
+	min-height: 100%;
 	flex: 1;
 	display: flex;
 	flex-direction: column;
