--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	background-color: black;
+	height: 100%;
 }
 
 a {
@@ -14,4 +15,8 @@ a {
 
 * {
 	box-sizing: border-box;
+}
+
+#__next {
+	height: 100%;
 }
